# LearnOpenGL

./: .gitignore  CMakeLists.txt  imgui.ini
src/: main.cpp
src/GLDebug/: GLDebug.cpp  GLDebug.h
src/IndexBuffer/: IndexBuffer.cpp  IndexBuffer.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Shader/: Shader.cpp  Shader.h
src/Tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
src/Texture/: Texture.cpp  Texture.h
src/VertexArray/: VertexArray.cpp  VertexArray.h
src/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
src/VertexBufferLayout/: VertexBufferLayout.h
